Bug 129514 - FILESAVE: DOCX: checkboxes lost after RT
Summary: FILESAVE: DOCX: checkboxes lost after RT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:6.5.0 target:6.4.0.2
Keywords: bibisected, regression
: 129576 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-12-20 11:32 UTC by Xisco Faulí
Modified: 2020-06-08 13:44 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-12-20 11:32:07 UTC
Steps to reproduce:
1. Open attachment 59581 [details] from bug 48378
2. Save it as .DOCX
3. Open the new created document

-> Many of the checkboxes are gone

reproduced in

Version: 6.5.0.0.alpha0+
Build ID: dee81fb2e1df5091702b3c8b0e4a3f2b58e89291
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 2 Michael Stahl 2019-12-23 13:08:33 UTC
*** Bug 129576 has been marked as a duplicate of this bug. ***
Comment 3 Michael Stahl 2019-12-23 13:59:45 UTC
fixed on master
Comment 4 Commit Notification 2019-12-23 14:00:36 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b03fefcc4dbdfee3b9eeb5fa0e586dd12ddcd3d2

tdf#129514 sw: DOCX export: write separator for CH_TXT_ATR_FORMELEMENT

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2019-12-26 09:39:04 UTC
Verified in

Version: 6.5.0.0.alpha0+
Build ID: 1abfc8e2f677024ea058e96f3133e503ba89ea02
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Michael S., thanks for fixing this issue!
Comment 6 Commit Notification 2019-12-26 09:45:43 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/5a2657aed17d5163acbfec48193c968f6707fbb0

tdf#129514 sw: DOCX export: write separator for CH_TXT_ATR_FORMELEMENT

It will be available in 6.4.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.