tdf#129514 sw: DOCX export: write separator for CH_TXT_ATR_FORMELEMENT

... fieldmarks; the input DOC file has no separators, like:

^S FORMCHECKBOX ^A^U

but adding the separator doesn't appear to hurt and the
DocxAttributeOutput gets confused by the lack of it and puts the run
that should be after the field into the field.

(regression from 94e0b8407b02d76b27324b8b08012eb024aca9e9)

Change-Id: Ibeb1bb2ad3a4ed9c0ac9c3e90cc193debf7ad5db
Reviewed-on: https://gerrit.libreoffice.org/85753
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@cib.de>
(cherry picked from commit b03fefcc4dbdfee3b9eeb5fa0e586dd12ddcd3d2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/85758
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>