sw/qa/extras/globalfilter/globalfilter.cxx
@@ -1230,10 +1230,7 @@ void Test::testCheckBoxFormField()
         IDocumentMarkAccess* pMarkAccess = pDoc->getIDocumentMarkAccess();
 
         // We have two check box form fields
-        if(rFilterName == "Office Open XML Text")
-            CPPUNIT_ASSERT_EQUAL_MESSAGE(sFailedMessage.getStr(), sal_Int32(4), pMarkAccess->getAllMarksCount());
-        else
-            CPPUNIT_ASSERT_EQUAL_MESSAGE(sFailedMessage.getStr(), sal_Int32(2), pMarkAccess->getAllMarksCount());
+        CPPUNIT_ASSERT_EQUAL_MESSAGE(sFailedMessage.getStr(), sal_Int32(2), pMarkAccess->getAllMarksCount());
 
         int nIndex = 0;
         for(auto aIter = pMarkAccess->getAllMarksBegin(); aIter != pMarkAccess->getAllMarksEnd(); ++aIter)
